--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,8 @@ sudo: required
 python: 
 - '3.6'
 before_install:
-#- echo Running before_install
-#- git clone --depth=50 --branch=master https://github.com/OpenMatrixLanguage/OpenMatrix.git OpenMatrixPublic
-#- git clone --depth=50 --branch=master https://github.com/OpenMatrixLanguage/Continuous_Integration_Linux.git Linux
-#- curl -v -O http://www.netlib.org/lapack/lapack-3.7.1.tgz
+- echo Running before_install
+- git clone --depth=50 --branch=master https://github.com/OpenMatrixLanguage/OpenMatrix.git OpenMatrixPublic
 env:
   SH=bash
   OML_ROOT=$PWD/OpenMatrixPublic
@@ -22,15 +20,19 @@ env:
   LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$OML_THIRDPARTY/hdf5/hdf5-1.10.1/hdf5/lib
   LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$OML_THIRDPARTY/sundials/sundials-3.1.0-install/lib
   LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$OML_ROOT/src/bin/linux64
-#  LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/bin:/usr/lib
-#  LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu
-#  LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/lib/x86_64-linux-gnu
+  LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/bin:/usr/lib
+  LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu
+  LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/lib/x86_64-linux-gnu
   PATH=$PATH:$OML_ROOT/src/bin/linux64
-#  OML_PYTHONHOME=/usr
-#  OML_PYTHONVERSION=python3
-#  OML_PYTHON_NUMPYDIR=$OML_PYTHONHOME/lib/$OML_PYTHONVERSION/dist-packages/numpy/core/include/numpy/
+  OML_PYTHONHOME=/usr
+  OML_PYTHONVERSION=python3
+  OML_PYTHON_NUMPYDIR=$OML_PYTHONHOME/lib/$OML_PYTHONVERSION/dist-packages/numpy/core/include/numpy/
 before_script:
+- git clone --depth=50 --branch=master https://github.com/OpenMatrixLanguage/Continuous_Integration_Linux.git Linux
+- curl -v -O http://www.netlib.org/lapack/lapack-3.7.1.tgz
 script:
+- cd $OML_ROOT/src
+- ls -alF
 - make -f makefile.open
 after_success:
 #- chmod 777 $OML_ROOT/src/bin/linux64/omlconsole
