--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ env:
 before_script:
 - git clone --depth=50 --branch=master https://github.com/OpenMatrixLanguage/Continuous_Integration_Linux.git Linux
 - curl -v -O http://www.netlib.org/lapack/lapack-3.7.1.tgz
+- ls -alF
 script:
 - cd $OML_ROOT/src
 - ls -alF
