--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
 - make -f makefile.open
 after_success:
 #- chmod 777 $OML_ROOT/src/bin/linux64/omlconsole
-#- ls -alF $OML_ROOT/src/bin/linux64
+- ls -alF $OML_ROOT/src/bin/linux64
 #- cd $OML_ROOT/Tests/RegressionTests && pwd
 #- perl ../regressOMLConsole.pl -travis
 #- cd $OML_ROOT/Tests
