--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,5 @@ after_success:
 - cd $OML_ROOT/Tests
 - source run_toolbox_tests.sh
 - cd $OML_ROOT/Tests
-- ls -alF ..
-- ls -alF ../..
-- ls -alF ../../..
-- source ../../evaluate_test_results.sh
+- source evaluate_test_results.sh
 compiler: gcc
